# News-Recommender-system

./: Articles.py  Readme.md  app.py  model.ipynb  pyproject.toml  requirements.txt  script.py
static/: styles.css
templates/: index.html
