[tool.poetry]
name = "news-recommender-system"
version = "0.1.0"
description = ""
authors = ["swax10 <shreyasw496@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faiss-cpu = ">=1.10.0,<2.0.0"
numpy = ">=2.2.3,<3.0.0"
sentence-transformers = ">=3.4.1,<4.0.0"
flask = ">=3.1.0,<4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
